# TDP-Dune2022

./: CMakeLists.txt  README.md  client_main.cpp  documentacion.md  install.sh  main.cpp  main_QT.cpp  main_SDL.cpp  multithreading.md  new_server_main.cpp  nuevo_diseño.md  readme.md  server_main.cpp  server_setup.h
data/: dune.map  instr.txt  sprites.txt
data/buttoninfo/: data.txt
include/: astar.h  board.h  building.h  buildingfactory.h  cell.h  client_audioplayer.h  client_camera.h  client_explosion.h  client_explosionshandler.h  client_gamehud.h  client_gamehud_button.h  client_gamemap.h  client_mouse.h  client_player.h  client_printer.h  client_renderhandler.h  client_selectable.h  client_setup.h  client_shot.h  client_shotshandler.h  client_texturehandler.h  common_maphandler.h  common_protocol.h  common_resolver.h  common_socket.h  common_utils.h  mouse.h  new_server.h  old_client_player.h  player.h  protocol.h  selectable.h  server.h  server_astar.h  server_board.h  server_building.h  server_buildingfactory.h  server_cell.h  server_clienthandler.h  server_gameresources.h  (+12 more)
src/: astar.cpp  board.cpp  building.cpp  buildingfactory.cpp  cell.cpp  client_audioplayer.cpp  client_camera.cpp  client_explosion.cpp  client_explosionshandler.cpp  client_gamehud.cpp  client_gamehud_button.cpp  client_gamemap.cpp  client_mouse.cpp  client_player.cpp  client_printer.cpp  client_renderhandler.cpp  client_selectable.cpp  client_shot.cpp  client_shotshandler.cpp  client_texturehandler.cpp  common_maphandler.cpp  common_protocol.cpp  common_resolver.cpp  common_socket.cpp  common_utils.cpp  mouse.cpp  new_server.cpp  player.cpp  protocol.cpp  resolver.cpp  selectable.cpp  server.cpp  server_astar.cpp  server_board.cpp  server_building.cpp  server_buildingfactory.cpp  server_cell.cpp  server_clienthandler.cpp  server_gameresources.cpp  server_selectable.cpp  (+12 more)
src/ui/: creditswindow.cpp  creditswindow.ui  factionwindow.cpp  factionwindow.ui  lobbywindow.cpp  lobbywindow.ui  mainwindow.cpp  mainwindow.ui  resources.qrc  vistas.h
